--- a/src/App.css
+++ b/src/App.css
@@ -1377,6 +1377,8 @@
   width: 500px; /* change width */
   height: 500px; /* change height */
   stroke-width: 10; /* change stroke width */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
 }
 
 .svg-container{
@@ -1384,6 +1386,15 @@
   justify-content: center;
   align-items: center;
   height: 100dvh;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 
