--- a/src/App.css
+++ b/src/App.css
@@ -1373,6 +1373,14 @@
 
 /* LOADER */
 /* ///SVG/// */
+.image-loading-spinner{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 500px;
+}
+
 .my-svg {
   width: 500px; /* change width */
   height: 500px; /* change height */
